# VPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vam/vplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JavaCallHelper.cpp  JavaCallHelper.h  VFFmpeg.cpp  VFFmpeg.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/ffincludes/libavcodec/: adts_parser.h  avcodec.h  bsf.h  codec.h  codec_desc.h  codec_par.h  defs.h  dv_profile.h  packet.h  videotoolbox.h  vorbis_parser.h
app/src/main/cpp/ffincludes/libavfilter/: avfilter.h  buffersink.h  buffersrc.h
app/src/main/cpp/ffincludes/libavformat/: avformat.h
app/src/main/cpp/ffincludes/libavutil/: buffer.h  display.h  dovi_meta.h  ffversion.h  frame.h  hwcontext.h  hwcontext_d3d11va.h  hwcontext_drm.h  hwcontext_opencl.h  hwcontext_vulkan.h  pixfmt.h  timecode.h
app/src/main/cpp/ffincludes/libswscale/: swscale.h
app/src/main/java/com/vam/vplayer/: FileUtil.kt  MainActivity.kt  PermissionUtil.java
app/src/main/java/com/vam/vplayer/player/: VPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/vam/vplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
